# insight-python

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-dev  Procfile  README.md  docker-compose-dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
insight_python/: app.py  connection.py  constants.py  helper.py  schemes.py  settings.py
